@@ -4,6 +4,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 * Verilator 4.103 devel
 
+****  Support queue slicing (#2326).
+
 
 * Verilator 4.102 2020-10-15
 
